[gd_scene load_steps=23 format=3 uid="uid://ckvml63hdsptk"]

[ext_resource type="FontFile" uid="uid://cxis0d8o6i83q" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_lpwf7"]
[ext_resource type="Script" uid="uid://dn67wjet7fw7d" path="res://Scripts/gameover.gd" id="1_qy7gw"]
[ext_resource type="Texture2D" uid="uid://c668yt2tf0vtq" path="res://Assets/objects/monitorstatic/monitorstatic (5).jpg" id="2_i47r0"]
[ext_resource type="FontFile" uid="uid://cao7skrrs3un5" path="res://Assets/fonts/Urban Shadow Sans Serif.otf" id="2_org1n"]
[ext_resource type="Texture2D" uid="uid://cup65kdgdo3v7" path="res://Assets/objects/monitorstatic/monitorstatic (1).jpg" id="2_qfkai"]
[ext_resource type="Texture2D" uid="uid://ccknesb8jaccu" path="res://Assets/objects/monitorstatic/monitorstatic (2).jpg" id="3_ecavu"]
[ext_resource type="Texture2D" uid="uid://sw1qsnsik5vs" path="res://Assets/objects/monitorstatic/monitorstatic (3).jpg" id="4_pr6bw"]
[ext_resource type="AudioStream" uid="uid://ch8atmhcgq6on" path="res://Assets/sounds/uiHoveron.ogg" id="4_trggy"]
[ext_resource type="Texture2D" uid="uid://c7eai177jnjq4" path="res://Assets/objects/monitorstatic/monitorstatic (4).jpg" id="5_3bldl"]
[ext_resource type="AudioStream" uid="uid://cfuurh6fhfc7" path="res://Assets/sounds/uiHoveroff.ogg" id="5_i47r0"]
[ext_resource type="AudioStream" uid="uid://dc6du6htd3uph" path="res://Assets/sounds/uiSelect.ogg" id="6_nesse"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_181lf"]
frames = 5
speed_scale = 30.0
frame_0/texture = ExtResource("2_qfkai")
frame_1/texture = ExtResource("3_ecavu")
frame_1/duration = 1.0
frame_2/texture = ExtResource("4_pr6bw")
frame_2/duration = 1.0
frame_3/texture = ExtResource("5_3bldl")
frame_3/duration = 1.0
frame_4/texture = ExtResource("2_i47r0")
frame_4/duration = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfkai"]
bg_color = Color(0.13, 0.13, 0.13, 0.5647059)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.59, 0.59, 0.59, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qy7gw"]
bg_color = Color(0.07680001, 0.35903993, 0.48, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.078431375, 0.36078432, 0.47843137, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdwfc"]
bg_color = Color(0.026177606, 0.07163545, 0.254907, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.02745098, 0.07058824, 0.25490198, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lw2kh"]
bg_color = Color(0.12543598, 0.22955105, 0.64107025, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.1254902, 0.23137255, 0.6392157, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_org1n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ecavu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_org1n"]
bg_color = Color(0.026177606, 0.07163545, 0.254907, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.02745098, 0.07058824, 0.25490198, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Animation" id="Animation_lw2kh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qy7gw"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdwfc"]
_data = {
&"RESET": SubResource("Animation_lw2kh"),
&"fadein": SubResource("Animation_qy7gw")
}

[node name="GameOver" type="CanvasLayer"]
layer = 2
script = ExtResource("1_qy7gw")

[node name="ColorRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.24480002, 0.27336, 0.34, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0000043, 1.0000141)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_181lf")

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 288.99875
offset_top = 102.99855
offset_right = 996.9957
offset_bottom = 294.99585
theme_override_styles/panel = SubResource("StyleBoxFlat_qfkai")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.4329992
anchor_bottom = 0.17866632
offset_left = 354.9985
offset_top = 413.9942
offset_right = 666.7596
offset_bottom = 486.35443
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6399988, 0.6399988)
size_flags_horizontal = 4
theme_override_constants/separation = 200
alignment = 1

[node name="Retry" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_org1n")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_qy7gw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gdwfc")
theme_override_styles/hover = SubResource("StyleBoxFlat_lw2kh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_org1n")
text = "Retry"

[node name="quitmaybe" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_org1n")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_qy7gw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gdwfc")
theme_override_styles/hover = SubResource("StyleBoxFlat_lw2kh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_org1n")
text = "Quit"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -277.50128
offset_top = 166.99763
offset_right = 291.49872
offset_bottom = 233.99763
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lpwf7")
theme_override_font_sizes/font_size = 66
text = "GAME OVER"

[node name="really" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="really"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 721.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ecavu")

[node name="Label" type="Label" parent="really"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 384.0
offset_top = 175.0
offset_right = 871.0
offset_bottom = 242.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lpwf7")
theme_override_font_sizes/font_size = 66
text = "Give up?"

[node name="HBoxContainer" type="HBoxContainer" parent="really"]
layout_mode = 0
offset_left = 438.0
offset_top = 431.00003
offset_right = 1147.0
offset_bottom = 632.0
scale = Vector2(0.5859864, 0.5859864)
theme_override_constants/separation = 150

[node name="nvm" type="Button" parent="really/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_org1n")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_qy7gw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_org1n")
theme_override_styles/hover = SubResource("StyleBoxFlat_lw2kh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_org1n")
text = "Nvm
"

[node name="Quit" type="Button" parent="really/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_org1n")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_qy7gw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_org1n")
theme_override_styles/hover = SubResource("StyleBoxFlat_lw2kh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_org1n")
text = "Quit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gdwfc")
}

[node name="sounds" type="Node" parent="."]

[node name="ui" type="Node" parent="sounds"]

[node name="hoveron" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("4_trggy")

[node name="hoveroff" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("5_i47r0")

[node name="select" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("6_nesse")

[connection signal="mouse_entered" from="ColorRect/HBoxContainer/Retry" to="." method="_on_retry_mouse_entered"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="mouse_entered" from="ColorRect/HBoxContainer/quitmaybe" to="." method="_on_retry_mouse_entered"]
[connection signal="pressed" from="ColorRect/HBoxContainer/quitmaybe" to="." method="_on_quitmaybe_pressed"]
[connection signal="mouse_entered" from="really/HBoxContainer/nvm" to="." method="_on_nvm_mouse_entered"]
[connection signal="pressed" from="really/HBoxContainer/nvm" to="." method="_on_nvm_pressed"]
[connection signal="mouse_entered" from="really/HBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="really/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
